updated build from source instructions